[tool.poetry]
name = "nest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.38.0"
uvicorn = "^0.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
